# os-mai-labs-v19

./: CMakeLists.txt  child.cpp  first.txt  parent.cpp  second.txt
